--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="\resource\css\style.css">
-    <script src="resource\json\database.json"></script>
+    <script src=""></script>
     <script src="/resource/js/main.js"></script>
     <title>Document</title>
 </head>
