--- a/header.html
+++ b/header.html
@@ -17,5 +17,33 @@
 				<nav id="navbar"></nav>
 			</div>
 		</header>
+        <!--
+        +lo siguiente es lo que se queda en este archivo
+        -->
+        <main>
+            <div>
+                <div id="subtitulo" >
+                    <h2>alequivocadotv</h2>
+                </div>
+                <div id="description" >
+                    <p>
+                        en este sitio web estara la informacion completa sobre las actualizasciones de el canal de youtube.
+                    </p>
+                    <p>
+                        tambien estare compartiendoles tips que utilizo en mi vida cotidiana como desarrollador web.
+                    </p>
+                    <p>
+                        el propositode este sitio wen¿b es crear un aherramienta para desarrolladores que estan empezando,
+                        que yo creao y estoy seguro que al principio no abra mucha informacion y no sera muy util, pero con el transcurso de los dias habara mas informacion de las cuales no estan en otros sitios de internet.
+                    </p>
+                    <p>
+                        en este sitio tambien encontraras los codigos para descargarlos y utilizarlos en tu codigo.
+                    </p>
+                </div>
+            </div>
+        </main>
+        <footer>
+            hola
+        </footer>
 	</body>
 </html>
