--- a/header.html
+++ b/header.html
@@ -23,7 +23,7 @@
         <main>
             <div>
                 <div id="subtitulo" >
-                    <h2>alequivocadotv</h2>
+                    <h2>al equivocado tv</h2>
                 </div>
                 <div id="description" >
                     <p>
@@ -37,8 +37,11 @@
                         que yo creao y estoy seguro que al principio no abra mucha informacion y no sera muy util, pero con el transcurso de los dias habara mas informacion de las cuales no estan en otros sitios de internet.
                     </p>
                     <p>
-                        en este sitio tambien encontraras los codigos para descargarlos y utilizarlos en tu codigo.
+                        en este sitio tambien encontraras los codigos para descargarlos y utilizarlos en tu codigo.<div id="cursoran" ></div>
                     </p>
+                </div>
+                <div>
+                    <img src="resource/img/ALEQUIVICADOVERDE.png" id="img-logo" >
                 </div>
             </div>
         </main>
