--- a/header.html
+++ b/header.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href=".\resource\css\style.css?<?php echo date('Y-m-d H:i:s');?>" />
-		<script src="./resource/js/main.js"></script>
+		<link rel="stylesheet" type="text/css" href="\resource\css\style.css?<?php echo date('Y-m-d H:i:s');?>" />
+		<script src="/resource/js/main.js"></script>
 		<title>Document</title>
 	</head>
 	<body>
