--- a/inicio.html
+++ b/inicio.html
@@ -1,14 +1,41 @@
-<!DOCTYPE html>
-<html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="\resource\css\style.css?<?php echo date('Y-m-d H:i:s');?>" />
-		<title>Document</title>
-	</head>
-	<body>
-		
-        
-	</body>
-</html>
+<div>
+    <div id="description">
+        <p>
+            <span>
+                : ~$
+            </span>
+            en este sitio web estara la informacion completa sobre las actualizasciones de el canal de youtube.
+        </p>
+        <p>
+            <span>
+                : ~$
+            </span>
+            tambien estare compartiendoles tips que utilizo en mi vida cotidiana como desarrollador web.
+        </p>
+        <p>
+            <span>
+                : ~$
+            </span>
+            el propositode este sitio wen¿b es crear un aherramienta para desarrolladores que estan empezando,
+            que yo creao y estoy seguro que al principio no abra mucha informacion y no sera muy util, pero con el
+            transcurso de los dias habara mas informacion de las cuales no estan en otros sitios de internet.
+        </p>
+        <p>
+            <span>
+                : ~$
+            </span>
+            en este sitio tambien encontraras los codigos para descargarlos y utilizarlos en tu codigo.
+        </p>
+        <p>
+            <span>
+                : ~$
+                <span class="cursor_animation">
+                    |
+                </span>
+            </span>
+        </p>
+    </div>
+    <div>
+        <img src="/resource/img/icon_color-green.png" id="img-logo">
+    </div>
+</div>
