--- a/Codigos.html
+++ b/Codigos.html
@@ -1,13 +1,18 @@
-<section class="codes" id="codigos">
-    <div class="titulo_cod">
-        <h2 id="ti_codi">
-        </h2>
+<section class="codes" id="codigos"><!--
+
+    <div>
+        <div class="titulo_cod">
+            <h2 id="ti_codi">
+            </h2>
+        </div>
+        <img src="" alt="" srcset="">
+        <div class="url">
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+                Ver Codigo Fuente
+            </a>
+        </div>
     </div>
-    <div class="img">
-    </div>
-    <div class="url">
-        <a href="http://" target="_blank" rel="noopener noreferrer">
-            Ver Codigo Fuente
-        </a>
-    </div>
+-->
+
+
 </section>
