--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="\resource\css\style.css?<?php echo date('Y-m-d H:i:s');?>" />
-		<script src="/resource/js/main.js"></script>
+		<!--<script src="/resource/js/main.js"></script>-->
 		<meta >
 	</head>
 	<body>
