--- a/Codigos.html
+++ b/Codigos.html
@@ -1,18 +1,3 @@
-<section class="codes" id="codigos"><!--
-
-    <div>
-        <div class="titulo_cod">
-            <h2 id="ti_codi">
-            </h2>
-        </div>
-        <img src="" alt="" srcset="">
-        <div class="url">
-            <a href="http://" target="_blank" rel="noopener noreferrer">
-                Ver Codigo Fuente
-            </a>
-        </div>
-    </div>
--->
-
+<section class="codes" id="codigos">
 
 </section>
