--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="\resource\css\style.css?<?php echo date('Y-m-d H:i:s');?>" />
+		<link rel="stylesheet" type="text/css" href="/resource/css/style.css?<?php echo date('Y-m-d H:i:s');?>" />
 		<script src="/resource/js/main.js"></script>
 		<meta >
 	</head>
@@ -12,7 +12,7 @@
 		<header>
 			<div>
 				<div class="name-page">
-					<h1>alequivocado.TV</h1>
+					<h1><span>alequivocado</span><span class="tv">.TV</span></h1>
 				</div>
 				<nav id="navbar"></nav>
 			</div>
