--- a/testdeform.html
+++ b/testdeform.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="test.css">
+    <script src="test.js"></script>
     <title>Document</title>
 </head>
 
 <body>
-    <form action="testdeform.php" method="post">
+    <div id="paginas" >
+    </div>
+    <div id="test"></div>
+    <!--<form action="testdeform.php" method="post">
         <button type="submit" name="test"
             value="TRUCKERS OF EUROPE 3 | GAMEPLAY (NO COMMENTARY) | AL EQUIVOCADO TV {[#1]}"
             class="video_individual"><input type="hidden" value="asldjhsldasda" name="codigo_video">
@@ -17,7 +22,7 @@
                 </div>
                 <div class="clip-miniatura"><img src="http://i3.ytimg.com/vi/eZL4fDazxdg/maxresdefault.jpg"></div>
             </input></button>
-    </form>
+    </form>-->
 </body>
 
 </html>
